Correction of a few small mistakes
Note: I am not a native English-speaker but I think these corrections are right

--- a/index.Rmd
+++ b/index.Rmd
@@ -61,11 +61,11 @@ Hence, if you are starting to read this book, we assume you have a working knowl
 
 ## Book structure {-}
 
-+ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you are dealing with a large scale application. 
++ Part 1 (Building big Shiny Apps) gives a general context about what a successful Shiny App is and what challenges arise when you are dealing with a large scale application. 
 It also introduces the `{golem}` [@R-golem] package and more general concept about organising your workflow. 
 This first part will be light on code: you will read more about conceptual ideas and organisation strategy. 
 
-+ Part 2 to 6 describes a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.
++ Parts 2 to 6 describe a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.
 
 + Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 
@@ -95,7 +95,7 @@ passionately trains very diverse learner profiles at R.
 
 Cervan is Data Scientist at ThinkR. 
 He is enthusiastic and motivated when it comes to rolling up his sleeves for new challenges. Even if it means venturing dangerously into the depths of R, learning new languages and experimenting outside your comfort zone.
-Nevertheless, it remains reliable, constructive and efficient when it comes to using its skills to train or develop. He also enjoys training learners of all levels in the R language.
+Nevertheless, he remains reliable, constructive and efficient when it comes to using his skills to train or develop. He also enjoys training learners of all levels in the R language.
 
 ## Want to help? {-}
 
@@ -161,6 +161,7 @@ Thanks to them for their help on the book!
 + [Julian Stanley](https://github.com/julianstanley){target="_blank"}, for proof-reading chapter 3. 
 + [Aron Strandberg](https://github.com/aronolof) for proofreading several chapters.
 + [jpmarindiaz](https://github.com/jpmarindiaz){target="_blank"} for proofreading several chapters.
++ [Etienne Bacher](https://github.com/etiennebacher){target="_blank"} for proofreading introduction
 
 ```{r index-4, include = FALSE}
 # Some internal funs
